force-app/main/default/objects/Score_Tracker__c/Score_Tracker__c.object-meta.xml
<CustomObject>
    <description>Score Tracker custom object</description>
    <label>Score Tracker</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Score Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>