force-app/main/default/objects/Score_Tracker__c/fields/Expertise_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Attribute__c</fullName>
    <description>Expertise attribute selected by employee</description>
    <inlineHelpText>Select the expertise attribute</inlineHelpText>
    <label>Expertise Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform Expertise</fullName>
                <default>true</default>
                <label>Platform Expertise</label>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>