force-app/main/default/objects/Score_Tracker__c/fields/Score_Value__c.field-meta.xml
<CustomField>
    <fullName>Score_Value__c</fullName>
    <label>Score Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>